css/style.css
html {
  min-height: 100%;
  overflow-x: hidden;
}

body {
  min-height: 100%;
  font-family: "Helvetica Neue", sans-serif;
  font-size: 14px;
  color: #fff;
  background: #4f81ff;
  background: -moz-linear-gradient(-45deg, #4f81ff 0%, #3862fd 50%, #2144fb 100%);
  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #4f81ff), color-stop(50%, #3862fd), color-stop(100%, #2144fb));
  background: -webkit-linear-gradient(-45deg, #4f81ff 0%, #3862fd 50%, #2144fb 100%);
  background: -o-linear-gradient(-45deg, #4f81ff 0%, #3862fd 50%, #2144fb 100%);
  background: -ms-linear-gradient(-45deg, #4f81ff 0%, #3862fd 50%, #2144fb 100%);
  background: linear-gradient(135deg, #4f81ff 0%, #3862fd 50%, #2144fb 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4f81ff', endColorstr='#2144fb', GradientType=1);
  overflow-x: hidden;
}

button {
  font-family: "Helvetica Neue", sans-serif;
}

h1 {
  font-weight: bold;
  font-size: 32px;
  margin-bottom: 25px;
}

p.intro {
  width: 265px;
  float: right;
  font-size: 13px;
  line-height: 17px;
}

a {
  color: #fff;
  text-decoration: underline;
}

body > #main {
  padding-top: 60px;
}

body > #main > .top {
  border-bottom: 1px solid #90acff;
  margin-bottom: 40px;
  padding-bottom: 40px;
}

.wrap {
  width: 860px;
  margin: 0 auto;
}

.options {
  float: left;
  margin-right: 10px;
  position: relative;
}

#layout {
  display: inline-block;
  box-shadow: 1px 1px 0 #90adfe;
  padding: 1px 0 0 1px;
  background: #315cff;
}

#layout button {
  width: 118px;
  height: 38px;
  margin-right: 0;
  display: block;
  float: left;
  border: none;
  background: #315cff;
  background: -moz-linear-gradient(top, #315cff 0%, #3a6dff 12%, #3869ff 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #315cff), color-stop(12%, #3a6dff), color-stop(100%, #3869ff));
  background: -webkit-linear-gradient(top, #315cff 0%, #3a6dff 12%, #3869ff 100%);
  background: -o-linear-gradient(top, #315cff 0%, #3a6dff 12%, #3869ff 100%);
  background: -ms-linear-gradient(top, #315cff 0%, #3a6dff 12%, #3869ff 100%);
  background: linear-gradient(to bottom, #315cff 0%, #3a6dff 12%, #3869ff 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#315cff', endColorstr='#3869ff', GradientType=0);
  color: #89a7ff;
  font-size: 16px;
  margin: 0;
  font-weight: bold;
}

#layout button.active {
  background: #4f81ff;
  filter: none;
  height: 38px;
  width: 120px;
  border: 1px solid #5f8dff;
  color: #fff;
}

#layout button:hover {
  cursor: pointer;
}

#type .left,
#type .right {
  float: left;
}

.options {
  float: left;
  width: 220px;
  margin-right: 10px;
}

.options > div {
  float: left;
}

.options #key {
  margin-right: 17px;
  padding-top: 81px;
}

.options #type {
  padding-top: 81px;
}

.options > div .left {
  float: left;
  margin-right: 4px;
}

.options > div .right {
  float: left;
}

.options button {
  display: block;
  margin-bottom: 4px;
  height: 23px;
  width: 62px;
  background: transparent;
  color: #fff;
  border: 1px solid #a1b7ff;
  font-size: 12px;
}

.options button.active {
  background: #7596ff;
  color: #fff;
  border-color: #a2b9ff;
}

.options button:hover {
  border-color: #5c83ff;
  cursor: pointer;
}

.pads {
  width: 480px;
  float: left;
  padding: 5px 0 0 5px;
}

.pads .pad {
  position: relative;
  float: left;
  width: 110px;
  height: 110px;
  line-height: 100px;
  text-align: center;
  background: #b1c3fe;
  opacity: 0.5;
  color: #E8E8E8;
  margin: 10px 0 0 10px;
  font-size: 90px;
  transition: opacity 0.25s ease-in-out;
}

.current .pads.pads12 .pad {
  width: 150px;
}

.pads .pad.highlight {
  background: #fff;
  opacity: 1;
}

/*collection*/

.collection {
  padding-bottom: 30px;
  margin-top: 30px;
}

.collection .pads {
  width: 135px;
  margin-right: 20px;
  position: relative;
  padding-bottom: 20px;
}

.collection .pads .pad {
  width: 23px;
  height: 23px;
  margin: 0 5px 5px 0;
  box-shadow: none;
  border: 1px solid #bacbff;
  background: transparent;
}

.collection .pads .pad.highlight {
  background: #7596ff;
}

.collection .pads.pads12 .pad {
  width: 33px;
}

.collection .pads .name {
  font-weight: bold;
  margin-bottom: 5px;
}

.collection .pads .remove {
  display: block;
  position: absolute;
  right: 2px;
  top: 26px;
  text-decoration: none;
  color: #3862fd;
  border-radius: 1px;
  background: #fff;
  width: 12px;
  height: 12px;
  line-height: 12px;
  text-align: center;
  font-size: 16px;
}

.collection .pads .remove:hover {
  opacity: 0.4;
}

.actions {
  border-top: 1px solid #90acff;
  border-bottom: 1px solid #90acff;
  height: 40px;
  position: relative;
}

.actions button {
  height: 40px;
  border: none;
  display: block;
  float: left;
  font-weight: bold;
  background: transparent;
  border-left: 1px solid #90acff;
  color: #fff;
  font-size: 15px;
  margin: 0;
  padding: 0 40px;
}

.actions button#print {
  border-right: 1px solid #90acff;
}

.actions button:hover {
  cursor: pointer;
  color: #90acff;
}

.clear {
  clear: both;
}

.hidden {
  display: none;
}

section#mpc_container {
  display: block;
  width: 502px;
  height: 502px;
  position: relative;
  perspective-origin-x: 100%;
  perspective-origin-y: 0%;
  perspective: 1500px;
  top: 100px;
  left: 300px;
}

#mpc {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  transform-style: preserve-3d;
  transition: transform 1s;
  transform: translateZ(-250px) rotateX(-37deg) rotateY(-15deg);
}

#mpc figure {
  width: 500px;
  height: 500px;
  display: block;
  position: absolute;
  border: 1px solid #fff;
  background: rgba(56, 98, 253, 0.8);
}

#mpc .front {
  height: 85px;
  transform: rotateY(0deg) translateZ(250px);
}

#mpc .back {
  height: 85px;
  transform: rotateX(180deg) translateZ(250px);
}

#mpc .right {
  height: 85px;
  transform: rotateY(90deg) translateZ(250px);
}

#mpc .left {
  height: 85px;
  transform: rotateY(-90deg) translateZ(250px);
}

#mpc .top {
  transform: rotateX(90deg) translateZ(250px);
}

#mpc .bottom {
  transform: rotateX(-90deg) translateZ(-165px);
}

.tour-stop {
  display: inline-block;
}

.no-csstransforms3d #mpc figure {
  display: none;
}

.no-csstransforms3d #mpc figure.top {
  display: block;
  transform: none;
}

.no-csstransforms3d section#mpc_container {
  top: -15px;
  left: 250px;
}

.no-csstransforms3d .actions {
  margin-top: 40px;
}

.hidden {
  display: none !important;
}

#headline {
  display: inline-block;
  height: 32px;
  width: 0px;
}

iframe {
  float: left;
}

